charts/test/cardano/templates/headless-svc.yaml
---
# Source: cardano/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-cardano-headless
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: tcp-node
      port: 6000
      targetPort: node
  selector:
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
