charts/test/cardano/templates/networkpolicies.yaml
---
# Source: cardano/templates/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: "ixp"
  name: deny-from-other-namespaces
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
---
# Source: cardano/templates/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-allow-ingress
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: producer
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: relay
          app.kubernetes.io/name: cardano
          app.kubernetes.io/instance: RELEASE-NAME
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: "ixp"
---
# Source: cardano/templates/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-deny-external-egress
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: producer
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector: {}
---
# Source: cardano/templates/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: relay-allow-external
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: relay
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  ingress:
  - ports:
    - port: 3001
---
# Source: cardano/templates/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: updater-allow-external
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: updater
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  ingress:
  - ports:
    - port: 3001
---
# Source: cardano/templates/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-metrics
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  ingress:
  - ports:
    - port: 12789
---
# Source: cardano/templates/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: air-gapped  # nothing in, nothing out
  namespace: "ixp"
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  policyTypes:
  - Egress
  - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: admin
  ingress: []
  egress: []
