charts/test/cardano/templates/p2p-deployment.yaml
---
# Source: cardano/templates/p2p-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "RELEASE-NAME-cardano-p2p"
  labels:
    app.kubernetes.io/component: p2p
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: p2p
      app.kubernetes.io/name: cardano
      app.kubernetes.io/instance: RELEASE-NAME
  template:
    metadata:
      annotations:
        checksum/testnet: 9d54024193451db00dbb4091f053c2ede2592b8c457163295a5a6db4687aab77
        prometheus.io/port: "12789"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: p2p
        app.kubernetes.io/name: cardano
        app.kubernetes.io/instance: RELEASE-NAME
    spec:
      serviceAccountName: RELEASE-NAME-cardano
      securityContext:
        runAsNonRoot: true
      containers:
        - name: p2p
          securityContext:
            runAsUser: 65532
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - all
          image: "regel/cardano-p2p:v0.0.14"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "10m"
              memory: "64Mi"
          command: ["/bin/sh", "-c"]
          args:
            - /cardano-p2p
              --config /p2p.yaml
              p2p
          volumeMounts:
            - name: config
              mountPath: /p2p.yaml
              subPath: p2p.yaml
              readOnly: true
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 1
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 600
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 10
            tcpSocket:
              port: 8080
          ports:
            - name: p2p
              containerPort: 8080
              protocol: TCP

      volumes:
        - name: config
          configMap:
            name: RELEASE-NAME-cardano-configmap-p2p
