charts/test/cardano/templates/p2p-service.yaml
---
# Source: cardano/templates/p2p-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-cardano-p2p-nginx
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: p2p
  selector:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
---
# Source: cardano/templates/p2p-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-cardano-p2p
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 6001
      targetPort: 8080
      protocol: TCP
      name: p2p
  selector:
    app.kubernetes.io/component: p2p
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
