charts/test/cardano/templates/producer-service.yaml
---
# Source: cardano/templates/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-cardano-producer
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6000
      targetPort: 3001
      protocol: TCP
      name: node
  selector:
    app.kubernetes.io/component: producer
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
