charts/test/cardano/templates/relay-service.yaml
---
# Source: cardano/templates/relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: RELEASE-NAME-cardano-relay
  labels:
    helm.sh/chart: cardano-0.1.3
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
    app.kubernetes.io/version: "1.30.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local  # See: https://kubernetes.io/docs/tutorials/services/source-ip/
  sessionAffinity: ClientIP  # connections from a particular client are passed to the same Pod each time
  ports:
    - port: 6000
      targetPort: 3001
      protocol: TCP
      name: node
  selector:
    app.kubernetes.io/component: relay
    app.kubernetes.io/name: cardano
    app.kubernetes.io/instance: RELEASE-NAME
